Use a FakeOnScreenSurface for unit tests

RendererPixelTests exercise SkiaRenderer and do a readback from
the gl_surface_ in SkiaOutputSurfaceOnGpu. Using a FakeOnScreenSurface
guarantees that GLContextVirtual will always make the surface current.

Bug: 914495
Change-Id: I1cccad720780307d9e14fe3f6e064ea6fb5327d7
Reviewed-on: https://chromium-review.googlesource.com/c/1382860
Reviewed-by: Peng Huang <penghuang@chromium.org>
Commit-Queue: Peng Huang <penghuang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617650}
Former-commit-id: 53776079784e4e76a2673e54b4d2745ac7475415