gpu/ipc/service/gles2_command_buffer_stub.cc
@@ -19,7 +19,6 @@
 #include "base/time/time.h"
 #include "base/trace_event/trace_event.h"
 #include "build/build_config.h"
-#include "components/viz/common/features.h"
 #include "gpu/command_buffer/common/constants.h"
 #include "gpu/command_buffer/common/gpu_memory_buffer_support.h"
 #include "gpu/command_buffer/common/mailbox.h"
@@ -124,12 +123,6 @@ gpu::ContextResult GLES2CommandBufferStub::Initialize(
   // MailboxManagerSync synchronization correctness currently depends on having
   // only a single context. See crbug.com/510243 for details.
   use_virtualized_gl_context_ |= manager->mailbox_manager()->UsesSync();
-
-#if defined(OS_MACOSX)
-  // TODO(penghuang): remove below line when the framebuffer issue is fixed in
-  // skia. https://crbug.com/914495
-  use_virtualized_gl_context_ &= !features::IsUsingSkiaRenderer();
-#endif
 
   bool offscreen = (surface_handle_ == kNullSurfaceHandle);
   gl::GLSurface* default_surface = manager->default_offscreen_surface();
